# RAG-42

./: .gitignore  Makefile  README.md  function.txt  ici.md  ici.txt  lunch_ollama.sh  module_ast_test.py  pyproject.toml  result.md  result_moulinette_extraction_text.txt  script-olama.py  test.md  test_maping_chunking.py  text_pytest.txt
.AI/: architecture.md  phase2.md  phase3_retrieval.md  phase4_generation.md  requierement_readme.md  start_readme.md
AI/: index.md  phase2.md
data/output/search_results/: dataset_code_public.json  dataset_doc_public.json  dataset_docs_public.json
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
moulinette_pkg/: README.md
src/: __main__.py  exceptions.py  exeptions.py  retriver.py
src/cli/: command_line_interface.py
src/data/processed/bm25_index/: data.csc.index.npy
src/evaluate/: evaluation.py
src/generation/: generator.py
src/indexing/: chunking.py  indexation.py  model_indexation.py
src/model/: model_generation.py  model_indexing.py  model_retrivial.py
src/retrieval/: retriever.py  retriver.py
src/utils/: security.py
test-file/script_extract_result_moulinette/: script_opti_moulinette_result.py  test_maping_chunking.py
test-file/test_file_inside/: file.py  phase2.md
test/src/indexing/: test_chunking.py
test_pytest/src/indexing/: test_chunking.py
