[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "langchain>=1.3.4",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "tqdm>=4.68.1",
]

[tool.uv.workspace]
members = [
    "rag",
]
