[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "markdown-it-py>=4.2.0",
    "pydantic>=2.13.4",
    "pystemmer>=3.1.0",
    "pytest>=9.1.0",
    "tqdm>=4.68.1",
]

[tool.uv.workspace]
members = [
    "rag",
]
