[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "markdown-it-py>=4.2.0",
    "mypy>=2.1.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pystemmer>=3.1.0",
    "pytest>=9.1.0",
    "tqdm>=4.68.1",
]

[tool.uv.workspace]
members = [
    "rag",
]

[[tool.mypy.overrides]]
module = [
    "bm25s.*",
    "fire.*",
    "Stemmer.*",
    "tqdm.*"
]
ignore_missing_imports = true